Trying Polling Frequcy
Figure out the URI reference link.